--- a/app/views/kitchens/_card.html.erb
+++ b/app/views/kitchens/_card.html.erb
@@ -1,4 +1,4 @@
-<div class="card border-0" style="width: 100%;">
+<div class="card border-0" style="width: 100%; height: 100%">
     <% if kitchen.photos.any? %>
       <% kitchen.photos.each do |photo| %>
       <%= cl_image_tag photo.key, class: "card-img-top" %>
@@ -6,7 +6,7 @@
     <% else %>
       <%= image_tag "kitchen_placeholder.jpg", class: "card-img-top" %>
     <% end %>
-  <div class="card-body p-3">
+  <div class="card-body flex-grow-1 p-3">
     <%= link_to "#{kitchen.title}", kitchen, style: "color: black; font-size: x-large" %>
     <!-- <p class="card-text"><%= kitchen.description.truncate(50) %></p> -->
     <p class="card-text text-muted m-0"><%= kitchen.address %></p>
