--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -1,7 +1,10 @@
 <div class="navbar navbar-expand-lg navbar-light navbar-lewagon sticky-top bg-light">
   <div class="container-fluid">
     <%= link_to root_path, class: "navbar-brand" do %>
+    <div class="logo">
       <%= image_tag("kitchen.svg", alt: "Kitchenup") %>
+      <h1><span class="text-info"><em><strong>kitchenup</strong></em></span></h1>
+    </div>
     <% end %>
 
 <!--   <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
