fix user profile with shari

--- a/app/views/users/show.html.erb
+++ b/app/views/users/show.html.erb
@@ -1,11 +1,13 @@
 
 <div class="container-fluid pt-3">
 <div class="card-product">
-  <% if @user.photo.attached? %>
-    <%= cl_image_tag @user.photo.key %>
-  <% else %>
-    <%= image_tag "user.png", class: "avatar-bordered avatar-large" %>
-  <% end %>
+  <div style="width:200px">
+    <% if @user.photo.attached? %>
+      <%= cl_image_tag @user.photo.key %>
+    <% else %>
+      <%= image_tag "user.png", style: "width: 80%" %>
+    <% end %>
+  </div>
   <div class="card-product-infos">
     <h2><%= @user.first_name.capitalize %></h2>
     <p>Email <%= @user.email %></p>
