--- a/app/views/bookings/show.html.erb
+++ b/app/views/bookings/show.html.erb
@@ -4,7 +4,7 @@
   <h1>Booking Code: <%= @booking.confirmation_code %></h1>
   <p> Current Status: <strong><%= @booking.booking_status %></strong></p>
   <p> Rental dates: <strong><%= @booking.start_date %> - <%= @booking.end_date %></strong></p>
-  <%= link_to "Back to my profile", user_path, class: "btn btn-info mt-2" %>
+  <%= link_to "Back to my profile", user_path(current_user), class: "btn btn-info mt-2" %>
 
   <% if (@booking.booking_status == "pending") && Date.today() < (@booking.start_date - 1) %>
     <%= link_to "Cancel Booking", cancel_booking_path(@booking), class: "btn btn-warning mt-2", method: :patch %>
